--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,13 @@
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=uncle-rich-v1
-JWT_SECRET_KEY=secret
-
-
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USERNAME=2016sagar2017@gmail.com.env.example
-EMAIL_PASSWORD=lfwsdsocskcpolrc
-APP_PORT = 9000
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_USER=postgres
+# DATABASE_PASSWORD=pawansubedi@789
+# DATABASE_NAME=railway
+# JWT_SECRET_KEY=secret
+# # EMAIL_HOST=smtp.gmail.com
+# # EMAIL_PORT=587
+# # EMAIL_USERNAME=2016sagar2017@gmail.com.env.example
+# # EMAIL_PASSWORD=lfwsdsocskcpolrc
+# APP_PORT = 9000
 
 
