--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "nestjs-session": "^2.0.0",
     "nodemailer": "^6.8.0",
