--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@
 # DATABASE_PASSWORD=pawansubedi@789
 # DATABASE_NAME=railway
 # JWT_SECRET_KEY=secret
-# # EMAIL_HOST=smtp.gmail.com
-# # EMAIL_PORT=587
-# # EMAIL_USERNAME=2016sagar2017@gmail.com.env.example
-# # EMAIL_PASSWORD=lfwsdsocskcpolrc
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USERNAME=2016sagar2017@gmail.com.env.example
+# EMAIL_PASSWORD=lfwsdsocskcpolrc
 # APP_PORT = 9000
 
 
