--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "version": 2,
-    "builds": [
+   "builds": [
         {
-            "src": "dist/**/*.js",
+            "src": "dist/main.js",
             "use": "@vercel/node"
         }
     ],
